fix config loader and swagger
