# backend/auth/internal/dto/swag.go
@@ -1,0 +1,21 @@
+package dto
+
+type LoginRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type LoginResponse struct {
+	SessID string `json:"sessID"`
+	User   User   `json:"user"`
+}
+
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
+
+type RegisterRequest struct {
+	Name     string `json:"name"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
