# backend/auth/internal/transport/http/handler/logout.go
@@ -5,6 +5,16 @@ import (
 	"github.com/gofiber/fiber/v3/middleware/session"
 )
 
+// Logout godoc
+// @Summary      Выход из аккаунта
+// @Description  Завершение сессии и удаление cookies
+// @Tags 		 Auth
+// @Accept       json
+// @Produce      json
+// @Security	 CookieAuth
+// @Success      200  {object}  object
+// @Success		 500  {object}  dto.ErrorResponse
+// @Router       /logout [get]
 func (h *AuthHandler) Logout(c fiber.Ctx) error {
 	sess := session.FromContext(c)
 
